# h2-sans-io

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: h2_codec.rs  hpack.rs  lib.rs
tests/: lib.rs
tests/h2_codec/: codec_lifecycle.rs  codec_processing.rs  continuation.rs  continuation_advanced.rs  edge_cases.rs  error_handling.rs  error_recovery.rs  frame_builder_validation.rs  frame_building.rs  frame_parsing.rs  memory_and_lifecycle.rs  mod.rs  padding_exhaustive.rs  preface_edge_cases.rs  protocol_frames.rs  rfc_compliance.rs  roundtrip_comprehensive.rs  stream_state.rs
tests/hpack/: binary_and_state.rs  decoding.rs  edge_cases.rs  encoding.rs  mod.rs
